--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ venv/
 __pycache__/
 *.py[cod]
 #migrations
-_migrations/*
-!_migrations/__init__.py
+migrations/*
+!migrations/__init__.py
 # PyCharm
 .idea/
 
